Поменял структуру под Diff-модель и вынес логику с команд в классы-модели